Fri Feb  8 13:26:17 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * ace/CDR_Stream.h:

          Fix Coverity Issue 972947 - Non virtual destructor. Made
          TAO_InputCDR destructor virtual.

Wed Feb  6 01:55:37 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * ace/Message_Block.cpp:

          Fixed fuzz error. Return 0 instead of NULL.

Tue Feb  5 21:04:17 UTC 2013  "Kevin Stanley"  <stanleyk@ociweb.com>

    Several new features and bug fixes captured in Bugzilla 4091, 4092, 4093,
    4094, 4095, and 4096. Also includes Bugzilla 3247. Specific details of the
    changes described below through the tag at the end bookmarked with:
    *****  OCI_Reliability_Enhancements Changes

    Tue Feb  5 17:01:48 UTC 2013  "Kevin Stanley"  <stanleyk@ociweb.com>

            * ace/Auto_Event.h:
            * bin/valgrind.supp:
            * protocols/ace/INet/inet.mpc:
            * protocols/examples/INet:
            * tests/CDR_Test.cpp:
            * protocols/ace/INet/FTP_Simple_exec.cpp:
            * protocols/ace/INet/HTTP_Simple_exec.cpp:

              Merged changes from trunk in preparation for merge. The
              above files had changes.

    Thu Jan 31 22:39:53 UTC 2013  Phillip LaBanca  <labancap@ociweb.com>

            * ace/Message_Block.cpp:

              Fixed problem with allocator in clone and duplicate

            * tests/Message_Block_Large_Copy_Test.cpp:

              Added reference count output

    Thu Jan 31 18:41:26 UTC 2013  Phillip LaBanca  <labancap@ociweb.com>

            * tests/Message_Block_Large_Copy_Test.cpp:

              Corrected test for scoreboard

    Thu Jan 31 14:38:03 UTC 2013  "Kevin Stanley"  <stanleyk@ociweb.com>

            * tests/Message_Block_Large_Copy_Test.cpp:

              Fixed another error in allocation missed the first time.

    Thu Jan 31 14:31:17 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

            * tests/Message_Block_Large_Copy_Test.cpp:
