@@ -1,3 +1,10 @@
+Fri Feb  8 19:03:33 UTC 2013  Phillip LaBanca  <labancap@ociweb.com>
+
+        * ace/Message_Block.cpp:
+
+          Fix Coverity Issue 972919 - Fixed possible dereference
+          of null pointer
+
 Fri Feb  8 13:26:17 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>
 
         * ace/CDR_Stream.h:
